Integracion COdigo Amigos (Codigo java9 comentado) + Codigo DataTesting (Streams), modificacion Pom.xml  y funcionamiento de tres clases diferentes y acceso a resources desde