@@ -2,6 +2,7 @@ package com.amigoscode.examples;
 
 import org.junit.jupiter.api.Test;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -9,7 +10,8 @@ public class JoiningStrings {
 
     @Test
     public void joiningStrings() throws Exception {
-        List<String> names = List.of("anna", "john", "marcos", "helena", "yasmin");
+        List<String> names = Arrays.asList("anna", "john", "marcos", "helena", "yasmin");  
+        		//List.of("anna", "john", "marcos", "helena", "yasmin");
         // "Anna, John, Marcos, Helena, Yasmin"
         StringBuilder join = new StringBuilder();
 
@@ -25,7 +27,8 @@ public class JoiningStrings {
 
     @Test
     public void joiningStringsWithStream() throws Exception {
-        List<String> names = List.of("anna", "john", "marcos", "helena", "yasmin");
+        List<String> names = Arrays.asList("anna", "john", "marcos", "helena", "yasmin"); 
+        		//List.of("anna", "john", "marcos", "helena", "yasmin");
         // "Anna, John, Marcos, Helena, Yasmin"
         String join = names.stream()
                 .map(name -> name.substring(0, 1).toUpperCase() + name.substring(1))
